<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">


    <TextView
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:onClick="QrScanBtnClick"
        android:textAllCaps="false"
        android:text="@string/scan_info" />

    <Button
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:onClick="HuaweiDriveBtnClick"
        android:textAllCaps="false"
        android:text="@string/login_info" />

</LinearLayout>