<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/qr_code"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:ems="50"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <TextView
            android:id="@+id/txt_scan_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:ems="50"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/text_filename"
            android:hint="@string/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/result_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="20"
                android:text="@string/save"
                android:textColor="#000000" />
            <Button
                android:ems="20"
                android:layout_margin="5dp"
                android:textColor="#000000"
                android:id="@+id/result_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout >